# The-Organizer

./: ICON_SETUP.md  LICENSE  README.md  generate_icons.py  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
browser-extension/: manifest.json  popup.css  popup.html  popup.js
docs/: ARCHITECTURE.md  CREATE_PROJECT.md  EXTENSION.md  SECURITY.md  UX.md
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  extension.rs  lib.rs  main.rs  models.rs  vault.rs
src/components/: Dashboard.svelte  EntryModal.svelte  EntryRow.svelte  Login.svelte  Setup.svelte
src/lib/: api.ts  errors.ts  password-generator.ts  stores.ts
