[package]
name = "the-organizer"
version = "0.1.0"
description = "The Organizer - local, zero-knowledge encrypted password manager"
authors = ["You"]
edition = "2021"

# Tauri tooling expects a build script.
build = "build.rs"

[lib]
name = "the_organizer"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "the-organizer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
url = "2"

argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"

zeroize = { version = "1", features = ["derive"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

# Clipboard support for copy_secret (cross-platform).
arboard = "3"

# File dialog support for import/export.
tauri-plugin-dialog = "2"
